fix: CSS on safari by using even more HTML defaults

--- a/static/style.pretty.css
+++ b/static/style.pretty.css
@@ -162,7 +162,6 @@ a:active,
 a:hover,
 a:link,
 a:visited {
-    color: LinkText;
     text-underline-offset: 0.375rem;
 }
 
@@ -234,15 +233,4 @@ ul.task-list li input[type=checkbox] {
     display: block;
     text-align: center;
     margin: .5rem auto;
-}
-
-@supports (-webkit-backdrop-filter: none) {
-    /* Safari-specific CSS */
-    a,
-    a:active,
-    a:hover,
-    a:link,
-    a:visited {
-        color: #3498db;
-    }
 }
